users insert and update

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "empty name, family, father"
+msgstr "تکمیل کردن نام،نام خانوادگی و نام پدر الزامی است"
+
 msgid "person edit"
 msgstr "اصلاح مشخصات فردی"
 
