classes , users_detail , search , ...

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,12 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "some_else"
+msgstr "سایر"
+
+msgid "private_home"
+msgstr "شخصی"
+
 msgid "list"
 msgstr "لیست"
 
