--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -26,6 +26,9 @@ msgstr "شخصی"
 msgid "list"
 msgstr "لیست"
 
+msgid "learn"
+msgstr "آموزش"
+
 msgid "text must be persian"
 msgstr "متن باید فارسی باشند"
 
