teacher, icon, classes, place multiclass

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "multiclass"
+msgstr "کلاس های چندتایی"
+
 msgid "capacity"
 msgstr "ظرفیت"
 
