price add for users 70%

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,51 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "allteacher"
+msgstr "اساتید"
+
+msgid "allusers"
+msgstr "فراگیران"
+
+msgid "dadd"
+msgstr "افزودن"
+
+msgid "dattendance"
+msgstr "حضور و غیاب"
+
+msgid "dclose"
+msgstr "لغو"
+
+msgid "dletters"
+msgstr "درخواست ها"
+
+msgid "dmedia"
+msgstr "سمعی بصری"
+
+msgid "dsettings"
+msgstr "تنظیمات"
+
+msgid "dshare"
+msgstr "گروه ها"
+
+msgid "dteacher"
+msgstr "استاد"
+
+msgid "duser"
+msgstr "فراگیر"
+
+msgid "likes"
+msgstr "تایید"
+
+msgid "message"
+msgstr "پیام"
+
+msgid "pictures"
+msgstr "تصاویر"
+
+msgid "sound"
+msgstr "صدا"
+
 msgid "error_in_insert"
 msgstr "اشتباه در ثبت"
 
@@ -495,7 +540,7 @@ msgid "classes_detail"
 msgstr "مشخصات کلاس"
 
 msgid "users_detail"
-msgstr "مشخصات کاربر"
+msgstr "مشخصات فراگیر"
 
 msgid "malefemale"
 msgstr "زن و مرد"
@@ -510,7 +555,7 @@ msgid "enable"
 msgstr "فعال"
 
 msgid "user"
-msgstr "کاربران"
+msgstr "فراگیر"
 
 msgid "class"
 msgstr "کلاس"
@@ -621,10 +666,10 @@ msgid "menu city add"
 msgstr "ثبت شهر"
 
 msgid "menu person add"
-msgstr "ثبت کاربر"
+msgstr "ثبت فراگیر"
 
 msgid "menu person list"
-msgstr "لیست کاربران"
+msgstr "لیست فراگیران"
 
 msgid "Profile"
 msgstr "صفحه شخصی"
@@ -891,7 +936,7 @@ msgid "type"
 msgstr "نوع"
 
 msgid "username"
-msgstr "نام کاربری"
+msgstr "نام فراگیری"
 
 msgid "value"
 msgstr "مقدار"
@@ -981,7 +1026,7 @@ msgid "pasport date incorect"
 msgstr "تاریخ اعتبار گذرنامه اشتباه است"
 
 msgid "username incorrect"
-msgstr "نام کاربری اشتباه است"
+msgstr "نام فراگیری اشتباه است"
 
 msgid "password incorrect"
 msgstr "کلمه عبور اشتباه است"
@@ -1146,16 +1191,16 @@ msgid "teachinghistory"
 msgstr "سوابق تدریس"
 
 msgid "users"
-msgstr "کاربران"
+msgstr "فراگیران"
 
 msgid "users_branch"
-msgstr "شعبه کاربران"
+msgstr "شعبه فراگیران"
 
 msgid "users_description"
-msgstr "توضیحات کاربر"
+msgstr "توضیحات فراگیر"
 
 msgid "users_group"
-msgstr "گروه بندی کاربران"
+msgstr "گروه بندی فراگیران"
 
 msgid "pending_classes"
 msgstr "درخواست شرکت در کلاس"
@@ -1662,7 +1707,7 @@ msgid "person_child"
 msgstr "تعداد فرزندان"
 
 msgid "person_type"
-msgstr "نوع کاربر"
+msgstr "نوع فراگیر"
 
 msgid "person_casecode"
 msgstr "شماره پرونده"
@@ -1680,13 +1725,13 @@ msgid "person_en_father"
 msgstr "نام پدر به زبان لاتین"
 
 msgid "person_third_name"
-msgstr "نام به زبان محلی کاربر"
+msgstr "نام به زبان محلی فراگیر"
 
 msgid "person_third_family"
-msgstr "نام خانوادگی به زبان محلی کاربر"
+msgstr "نام خانوادگی به زبان محلی فراگیر"
 
 msgid "person_third_father"
-msgstr "نام پدر به زبان محلی کاربر"
+msgstr "نام پدر به زبان محلی فراگیر"
 
 msgid "person_pasport_date"
 msgstr "تاریخ اتمام اعتبار گذر نامه"
@@ -1867,10 +1912,10 @@ msgstr "میزان فعالیت"
 
 # TABLE  users
 msgid "users_id"
-msgstr "کاربر"
+msgstr "فراگیر"
 
 msgid "users_name"
-msgstr "نام کاربری"
+msgstr "نام فراگیری"
 
 msgid "users_password"
 msgstr "کلمه عبور"
@@ -1880,11 +1925,11 @@ msgstr "رایانامه"
 
 # TABLE  users_branch
 msgid "users_branch_id"
-msgstr "شعبه بندی کاربران"
+msgstr "شعبه بندی فراگیران"
 
 # TABLE  users_description
 msgid "users_description_id"
-msgstr "توضیحات کاربر"
+msgstr "توضیحات فراگیر"
 
 msgid "users_description_text"
 msgstr "توضیحات"
