--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,12 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "pos_mellat"
+msgstr "درگاه بانک ملت"
+
+msgid "pos_melli"
+msgstr "درگاه بانک ملی"
+
 msgid "deposit"
 msgstr "‍پرداخت شهریه"
 
