start score , score_type, score_calculation :: insert & update

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,12 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "teachers_list"
+msgstr "لیست اساتید"
+
+msgid "teachers"
+msgstr "اساتید"
+
 msgid "add"
 msgstr "افزودن"
 
