--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,84 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "news"
+msgstr "اخبار"
+
+msgid "province add"
+msgstr "افزودن استان"
+
+msgid "show detail"
+msgstr "نمایش اطلاعات"
+
+msgid "edit extera detail"
+msgstr "تکمیل مشخصات"
+
+msgid "education information"
+msgstr "اطلاعات تحصیلی"
+
+msgid "teaching history"
+msgstr "سوابق تدریس"
+
+msgid "bridge"
+msgstr "پل های ارتباطی"
+
+msgid "teacher list"
+msgstr "لیست اساتید"
+
+msgid "operator list"
+msgstr "لیست کارشناسان"
+
+msgid "classes list"
+msgstr "لیست کلاس ها"
+
+msgid "add price"
+msgstr "ثبت شهریه"
+
+msgid "manage price"
+msgstr "مدیریت شهریه"
+
+msgid "score type"
+msgstr "ثبت نوع نمرات"
+
+msgid "manage classes price"
+msgstr "مدریت شهریه کلاس"
+
+msgid "score calculation"
+msgstr "روش محاسبه نمرات"
+
+msgid "price list"
+msgstr "لیست شهریه ها"
+
+msgid "certification list"
+msgstr "لیست گواهی نامه ها"
+
+msgid "upload users file"
+msgstr "ارسال فایل کاربران"
+
+msgid "add report"
+msgstr "افزودن گزارش"
+
+msgid "home page"
+msgstr "خانه"
+
+msgid "register"
+msgstr "ثبت نام"
+
+msgid "login"
+msgstr "ورود کاربران"
+
+msgid "strategy"
+msgstr "سیاست ها"
+
+msgid "contact"
+msgstr "تماس با ما"
+
+msgid "plan_expired_price"
+msgstr "زمان انقضای شهریه"
+
+msgid "expired_price"
+msgstr "زمان انقضای شهریه"
+
 msgid "tag"
 msgstr "نشانک"
 
@@ -44,7 +122,7 @@ msgstr "تاریخچه به روز رسانی"
 msgid "userprice"
 msgstr "شهریه"
 
-msgid "menu_drafts_add"
+msgid "add drafts"
 msgstr "ثبت پیش نویس پیامک"
 
 msgid "number"
@@ -80,7 +158,7 @@ msgstr "غیر فعال"
 msgid "mail"
 msgstr "اطلاع رسانی"
 
-msgid "menu_draft_add"
+msgid "add draft"
 msgstr "ثبت پیش نویس"
 
 msgid "send sms"
@@ -215,10 +293,10 @@ msgstr "نوع پرداخت"
 msgid "price_transactions"
 msgstr "شماره تراکنش"
 
-msgid "menu_province_add"
+msgid "add province"
 msgstr "ثبت استان"
 
-msgid "menu_country_add"
+msgid "add country"
 msgstr "ثبت کشور"
 
 msgid "multiclass"
@@ -659,7 +737,7 @@ msgstr "ردیف سیستمی"
 msgid "person_from"
 msgstr "صادره از شهر"
 
-msgid "menu_education_add"
+msgid "add education"
 msgstr "ثبت مقطع تحصیلات"
 
 msgid "classes_detail"
@@ -719,16 +797,16 @@ msgstr "لیست فراگیران"
 msgid "more"
 msgstr "بیشتر"
 
-msgid "menu_classes_add"
+msgid "add classes"
 msgstr "ثبت کلاس"
 
 msgid "menu_classes_list"
 msgstr "لیست کلاس ها"
 
-msgid "menu_place_add"
+msgid "add place"
 msgstr "ثبت مدرس"
 
-msgid "menu_posts_add"
+msgid "add posts"
 msgstr "ثبت خبر"
 
 msgid "sunday"
@@ -770,31 +848,31 @@ msgstr "جناب آقای"
 msgid "Mrs."
 msgstr "سرکار خانم"
 
-msgid "menu branch add"
+msgid "add branch"
 msgstr "ثبت شعبه"
 
-msgid "menu group add"
+msgid "add group"
 msgstr "ثبت گروه"
 
-msgid "menu plan add"
+msgid "add plan"
 msgstr "ثبت طرح"
 
-msgid "menu course add"
+msgid "add course"
 msgstr "ثبت دوره"
 
-msgid "menu permission add"
+msgid "add permission"
 msgstr "سطح دسترسی"
 
-msgid "menu absence add"
+msgid "add absence"
 msgstr "ثبت غیبت"
 
-msgid "menu city add"
+msgid "add city"
 msgstr "ثبت شهر"
 
-msgid "menu person add"
+msgid "add person"
 msgstr "ثبت فراگیر"
 
-msgid "menu person list"
+msgid "person list"
 msgstr "لیست فراگیران"
 
 msgid "Profile"
@@ -1208,9 +1286,6 @@ msgstr "شعبه ها"
 msgid "branch_description"
 msgstr "توضیحات شعب"
 
-msgid "bridge"
-msgstr "پل های ارتباطی"
-
 msgid "certification"
 msgstr "گواهی نامه"
 
@@ -1468,12 +1543,6 @@ msgstr "مسئول"
 
 msgid "expert"
 msgstr "کارشناس"
-
-msgid "login"
-msgstr "ورود"
-
-msgid "register"
-msgstr "ثبت نام"
 
 msgid "male"
 msgstr "مرد"
