topLinks :))) tnx ahmad

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "payment_count"
+msgstr "دفعات پرداخت"
+
 msgid "news"
 msgstr "اخبار"
 
