قرار دادن لینک های دسترسی سریع به پرونده ها و جابجایی بین صفحه ها $this->topLinks

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "add plan section"
+msgstr "ثبت مقاطع طرح"
+
 msgid "payment_count"
 msgstr "دفعات پرداخت"
 
