هرچه تلاش کردم جاوا یاد بگیرم بیشتر گند زدم

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "insert classes score"
+msgstr "ثبت نمرات کلاس"
+
 msgid "add plan section"
 msgstr "ثبت مقاطع طرح"
 
