add new page nezarat

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,12 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "item"
+msgstr "گزینه ها"
+
+msgid "validation"
+msgstr "اعتبار سنجی"
+
 msgid "return classes"
 msgstr "بازگشت به کلاس"
 
