push to astan server make login supervisor by another username

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "branch not match"
+msgstr "خطا در تطابق شناسه شعبه"
+
 msgid "selectbranch"
 msgstr "انتخاب شعبه"
 
