hefz lig presence

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "hefz_group_name"
+msgstr "گروه"
+
 msgid "race_hefz"
 msgstr "مسابقه"
 
