certification get string of meeting no and check duplicate transactions on one person

--- a/languages/fa_IR/LC_MESSAGES/fa_IR.po
+++ b/languages/fa_IR/LC_MESSAGES/fa_IR.po
@@ -17,6 +17,9 @@ msgstr "ماشین نیستم!"
 #
 #  START TRANSLATION MENU
 #
+msgid "string_time"
+msgstr "ساعات آموزشی به حروف"
+
 msgid "plan_absence_type"
 msgstr "روش محاسبه غیبت مجاز"
 
